--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: center;
   margin: 100px 0 0 40px;
-  /*background: center center url('../../assets/main/поле/field.png');*/
-  background-size: cover;
+  background: #020526;
+  border: 10px solid #252e6d;
+  border-radius: 7%;
+  background-size: cover ;
   align-items: center;
-  width: 570px;
-  height: 634px;
 }
