--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -1,8 +1,11 @@
 .wrap {
+  position: relative;
+  top: 10px;
+  left: 40px;
   display: flex;
   justify-content: center;
-  margin: 50px 0 0 40px;
-  background: #020526;
+  filter: drop-shadow(0 0 8.5px rgba(0,0,0,0.43));
+  background-color: #020526;
   border: 10px solid #252e6d;
   border-radius: 6%;
   background-size: cover ;
