--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
+@font-face {
+  font-family: 'marvin';
+  src: local('marvin'), url('./assets/fonts/marvin.ttf') format('ttf');
+  font-style: normal;
+  font-weight: normal;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'marvin', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #a1a1a1;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'marvin', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
