--- a/src/components/Moves/Moves.module.css
+++ b/src/components/Moves/Moves.module.css
@@ -5,6 +5,7 @@
   justify-content: center;
   width: 200px;
   height: 75px;
+  margin-left: 10px;
   background-image: linear-gradient(0deg, #0f3c79 0%, #09203f 100%);
   border-radius: 10px;
   font-family: 'Marvin';
