--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #a1a1a1;
+  color: #fff
 }
 
 code {
