--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -15,15 +15,16 @@
 
 .content {
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 10px;
   border-radius: 10px;
   background-image: linear-gradient(0deg, #0f3c79 0%, #09203f 100%);
   box-shadow: -1px 2px 19px 19px rgba(34, 60, 80, 0.2);
-  width: 400px;
-  height: 200px;
-  line-height: 200px;
+  width: 500px;
+  height: 300px;
   text-align: center;
-  vertical-align: middle;
   font-size: 25px;
 }
 .close {
