--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,10 @@
 @font-face {
-  font-family: 'marvin';
-  src: local('marvin'), url('./assets/fonts/marvin.ttf') format('ttf');
-  font-style: normal;
-  font-weight: normal;
+  font-family: 'Marvin';
+  src: local('Marvin'), url('./assets/fonts/marvin.ttf') format('truetype');
 }
 body {
   margin: 0;
-  font-family: 'marvin', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Marvin', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -16,6 +14,6 @@ body {
 }
 
 code {
-  font-family: 'marvin', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
