--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding:  0 10px;
   border-radius: 10px;
   background-image: linear-gradient(0deg, #0f3c79 0%, #09203f 100%);
   box-shadow: -1px 2px 19px 19px rgba(34, 60, 80, 0.2);
@@ -26,6 +26,21 @@
   height: 300px;
   text-align: center;
   font-size: 25px;
+}
+.title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: inline-block;
+  width: 100%;
+  padding: 10px 0 10px 0;
+  margin: 0; 
+  border-radius: 10px 10px 0 0;
+  line-height: 25px;
+  font-size: 25px;
+  vertical-align: middle;
+  text-align: center;
+  background-image: linear-gradient(0deg, #0f3c79 0%, #09203f 100%);
 }
 .close {
   position: absolute;
