--- a/src/components/ProgressBar/ProgressBar.module.css
+++ b/src/components/ProgressBar/ProgressBar.module.css
@@ -1,21 +1,19 @@
 .wrap {
-  position: relative;
-  top: -50px;
   display: flex;
   justify-content: space-around;
   width: 55%;
-  margin: 0 auto;
+  margin: 0 auto 20px;
 }
 
 .item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   width: 150px;
-  height: 127px;
+  height: 85px;
   background-image: linear-gradient(0deg, #0f3c79 0%, #09203f 100%);
-  border-radius: 10px;
+  border-radius: 0 0 10px 10px;
   font-size: 24px;
   text-align: center;
 }
